--- a/index.html
+++ b/index.html
@@ -9,7 +9,14 @@
 
 
     <div class="composition">
-        
+        <img src="/img/bg.jpg" alt="background" class="background">
+        <img src="/img/planet-1.png" alt="planet_1" class="planet_1">
+        <img src="/img/planet-2.png" alt="planet_2" class="planet_2">
+        <img src="/img/planet-3.png" alt="planet_3" class="planet_3">
+        <img src="/img/asteroid.png" alt="asteroid" class="asteroid">
+        <img src="/img/spaceship.png" alt="spaceship" class="spaceship">
+        <img src="/img/superman.png" alt="superman" class="superman">
+        <img src="/img/ufo.png" alt="ufo" class="ufo">
     </div>
 
 
